Adjusted widgets and layout notebooks to handle widget styling a bit earlier.

--- a/02b_widgets.ipynb
+++ b/02b_widgets.ipynb
@@ -195,7 +195,10 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "year_range = widgets.IntRangeSlider(description = 'Range of Years')"
+    "year_range = widgets.IntRangeSlider(description = 'Range of Years',\n",
+    "                                    style={'description_width': 'initial'})\n",
+    "# The style argument is used to set the width of the description wide enough\n",
+    "# to display the entire text"
    ]
   },
   {
@@ -214,8 +217,6 @@
    "id": "ce69851a-0cc5-489c-967f-c46663e37350",
    "metadata": {},
    "source": [
-    "**Display Note**: The slider widget may be displayed in a way that cuts off the descriptive text and the values. We will address how to fix this in the next notebook when we tweak the layout.\n",
-    "\n",
     "Okay great! But 0 - 100 isn't the range we want. Instead, we would like the minimum and maximum to be the earliest and latest years in our dataset. So we need to obtain those first."
    ]
   },
@@ -833,7 +834,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "window_size = widgets.IntSlider(description = 'Window Size', value=20, min=1, max=100)"
+    "window_size = widgets.IntSlider(description = 'Window Size', value=20, min=1, max=100,\n",
+    "                                style={'description_width': 'initial'})"
    ]
   },
   {
@@ -862,7 +864,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "poly_order = widgets.BoundedIntText(description = 'Poly Order', min=0, value=3, max=10)"
+    "poly_order = widgets.BoundedIntText(description = 'Poly Order', min=0, value=3, max=10,\n",
+    "                                    style={'description_width': 'initial'})"
    ]
   },
   {
