--- a/02c_layout.ipynb
+++ b/02c_layout.ipynb
@@ -127,25 +127,27 @@
    "id": "4619801c-bf74-4ba8-b01d-2918265221c3",
    "metadata": {},
    "source": [
-    "## Changing Style and Layout of Widgets\n",
-    "\n",
-    "### Changing Widget Styling\n",
-    "\n",
-    "The `style` attribute is used to expose non-layout related styling attributes of widgets. We will focus on more utilitarian styling in this notebook.\n",
-    "\n",
-    "You will notice one problem with the `year_range` slider is that the description text (e.g. 'Range of Years') is cutoff.  The `description_width` in style has a very convenient value of `initial` that makes the description just as wide as it needs to be so none of the letters are hidden.  With the `year_range` slider above visible to you, execute the following cell to see the difference."
+    "## Changing Style and Layout of Widgets"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "acec0efb-613c-4626-9995-4bb79220db3e",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#| export\n",
-    "# Make the year_range widget description wider to fit the text\n",
-    "year_range.style.description_width = 'initial'"
+    "### Changing Widget Styling\n",
+    "\n",
+    "In the previous notebook, we noted the `style` attribute when we set up the widgets to have enough room to display their full text descriptions. The `style` attribute is used to change non-layout related styling options for widgets.\n",
+    "\n",
+    "We previously used it to set the width of the widgets when we created them:\n",
+    "```python\n",
+    "year_range = widgets.IntRangeSlider(description = 'Range of Years',\n",
+    "                                    style={'description_width': 'initial'})\n",
+    "```\n",
+    "But what if we already created the `year_range` widget without the `style` attribute? We can still change the style of the widget after it has been created. We just call `style` attribute we want to change directly:\n",
+    "```python\n",
+    "year_range.style.description_width = 'initial'\n",
+    "```"
    ]
   },
   {
