--- a/04b_deployment_clientside.ipynb
+++ b/04b_deployment_clientside.ipynb
@@ -26,6 +26,30 @@
   },
   {
    "cell_type": "markdown",
+   "id": "22a5f352",
+   "metadata": {},
+   "source": [
+    "## Voici\n",
+    "\n",
+    "[Voici](https://github.com/voila-dashboards/voici) is a project that aims to provide a way to deploy Jupyter notebooks as standalone web applications.  It is built on top of [JupyterLite](https://jupyterlite.readthedocs.io/en/latest/), a smaller, browser-based version of the Jupyter notebook environment. JupyterLite (and thus Voici) uses WebAssembly to run a Python interpreter in the browser, and includes a JavaScript kernel for running JavaScript code. Both Voici and JupyterLite are still in the early stages of development, but is aimed at allowing client-side processing of Jupyter notebooks without requiring the installation of a Jupyter server.\n",
+    "\n",
+    "Assuming all the dependencies of your notebook are available in the JupyterLite environment, you can try to deploy your notebook as a standalone web application using Voici as follows:\n",
+    "\n",
+    "1. Create a project directory (in this tutorial, it is called `voici_project`) that will eventually contain:\n",
+    "   -  a \"webapp\" directory of Jupyter notebooks you want to deploy and\n",
+    "   -  an `environment.yml` file listing the required Python packages (Example provided in the `voici_project` directory)\n",
+    "2. In that project directory:\n",
+    "   - create an `environment.yml` file in the directory containing the list of required Python packages.\n",
+    "   - Place any notebooks and other files you want to deploy in the \"webapp\" directory.\n",
+    "   - via the CLI, run `voici build webapp` (assuming a \"webapp\" directory named `webapp`) to build the web application.  The build process will create a `_output` directory containing the built web application.\n",
+    "\n",
+    "The challenge is usually that during the build process, Voici will try to install WebAssembly converted versions of the Python packages that have C or rust code from the `emscripten-force` repo. If the package is not available in the WebAssembly format and uses any compiled C or rust code, the build will fail.\n",
+    "\n",
+    "**June 20 NOTE**: There is currently a problem in that during the build process `conda` is used to install the packages, and a bug was introduced in the build-process for WebAssembly packages at the `emscripten-force` repo that causes the build to fail with an error that \"'emscripten' is not a valid Platform\". [This is a known issue](https://github.com/mamba-org/mamba/issues/3291) and is [being worked on](https://github.com/conda/conda/pull/13962).  If this happens to you, you may need to perform a `conda clean --all` to allow any new versions of the packages to be installed in the future as you will have downloaded messed up package metadata.  The workaround is to use `micromamba` which is why we include it in the `complexapps-2024` environment."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "89b3df3d-e2c4-4b8d-91bc-64d96420b6bd",
    "metadata": {},
    "source": [
@@ -48,6 +72,18 @@
    "display_name": "python3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
