Apply suggestions from code review
Co-authored-by: Juan Cabanela <cabanela@mnstate.edu>

--- a/03a_pydantic.ipynb
+++ b/03a_pydantic.ipynb
@@ -32,7 +32,7 @@
     "\n",
     "The dashboard we have built so far works, but would be hard to include as part of a larger project, and its individual components would be difficult to reuse. For example, the controls to select a range of years and apply smoothing to the data would be useful in making other graphs. As the code stand now, it would be hard to take those pieces as a unit and integrate them into a different dashboard.\n",
     "\n",
-    "Put differenly, one might want a `DataSelector` widget that has as its value a range of years, a smoothing windows, and a polynomial order for the smoothing that can be reused.\n",
+    "Put differently, one might want a `DataSelector` widget that has as its value a range of years, a smoothing windows, and a polynomial order for the smoothing that can be reused.\n",
     "\n",
     "### Our route to the solution is indirect\n",
     "\n",
@@ -56,9 +56,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Writing classes in plain Python\n",
+  "## Review of Python classes\n",
     "\n",
-    "We being with a quick review of writing classes in Python. The smallest class you can write is below. It does not really do anything, but you can create instances of it."
+    "We begin with a quick review of writing classes in Python. If you are comfortable with this, you can jump ahead to the next section on \"Constructing a (First Draft) `DataSelector` Class with plain Python\".\n\n",
+    "The smallest class you can write is below. It does not really do anything, but you can create instances of it."
    ]
   },
   {
@@ -134,7 +135,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's call our method by creating an instance of the class and calling the method."
+    "Let's call our new method by creating an instance of the class and calling the `say_hello` method."
    ]
   },
   {
@@ -153,9 +154,9 @@
    "source": [
     "### Subclasses\n",
     "\n",
-    "Every class in Python is actually derived from another class, except for one class called `object`. A subclass has all of the attributes and methods of its parent.\n",
+    "Every class in Python is actually derived from another class, called its *parent* (ultimately the \"ancestor\" of all Python classes is the `object` class).  A subclass *inherits* all of the attributes and methods of its parent.\n",
     "\n",
-    "As an example of subclassing, we define a class below that builds on `Basic` by asking the user a question after greeting them."
+    "As an example of subclassing, we define a class inherits from `Basic` all of its methods and adds a new method that asks the user a question after greeting them."
    ]
   },
   {
@@ -210,11 +211,11 @@
    "source": [
     "### Adding an attribute to a class\n",
     "\n",
-    "Imagine we were going to extend this class by adding several more methods that each \"say\" something to the user, and that each of those will include the user's name. It would be convenient if the class just knew the name, something with can accomplish by adding an attribute to the class.\n",
+    "Imagine we were going to extend this class by adding several more methods that each \"say\" something to the user, and that each of those will include the user's name. It would be convenient if the class just knew the name, something we can accomplish by adding an attribute to the class.\n",
     "\n",
-    "Here we will add a name attribute to the `Basic` class. We will do that in a special method called `__init__` that is called when an instance of the class is created.\n",
+    "Here we will add a `name` attribute to the `Basic` class. We will do that in a special method called `__init__` that is called when an instance of the class is created.\n",
     "\n",
-    "You may wonder whether `Basic` is a subclass of anything. The answer is yes -- if you do not give an explicit superclass then Python assumes it is `object`."
+    "You may wonder whether `Basic` is a subclass of anything. The answer is yes -- if you do not provide an explicit parent class then Python assumes it is `object`."
    ]
   },
   {
@@ -333,7 +334,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### First draft of class to represent our data selector"
+    "## Constructing a (First Draft) `DataSelector` Class with plain Python"
    ]
   },
   {
@@ -427,7 +428,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Apparently Python does not see these as the same! We could fix that by implementing another magic method called `__eq__`, but it turns out there is an easier way, using data classes, that we will talk about shortly."
+    "Apparently Python does not see these as the same! We could fix that by implementing another magic method called `__eq__`, but it turns out there is an easier way, using data classes, which we will talk about shortly."
    ]
   },
   {
@@ -521,7 +522,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## `dataclass`: a more compact plain Python approach\n",
+    "## Constructing a (Second Draft) `DataSelector` Class with `dataclass`"
     "\n",
     "Writing a class with multiple attributes gets repetitive in Python. Each attribute typically comes with an argument to the class and lines of boilerplate code to set the attributes of the class to the those arguments.\n",
     "\n",
@@ -652,7 +653,7 @@
     "+ It has a human-readable string representation.\n",
     "+ You can check whether instances of the class are equal.\n",
     "\n",
-    "We could have done those last two things without `dataclass` by defining a couple of special methods methods in our class definition. It is really nice to just have it happen automatically behind the scenes, though!\n",
+    "We could have done those last two things without `dataclass` by defining a couple of special methods methods in our class definition. However, it's really nice to just have it happen automatically behind the scenes, though!\n",
     "\n",
     "*Note:* There is much more to data classes than we have covered. Read more about them XXX or in the [Python documentation](https://docs.python.org/3/library/dataclasses.html)."
    ]
@@ -1015,7 +1016,7 @@
    "source": [
     "With these changes we have some of the constraints we want. \n",
     "\n",
-    "There is one more thing we need to do: the polynomial order should be less than the window size in addition to being 10 or smaller.\n",
+    "There is one more thing we need to do: the polynomial order should be at least 1 less than the window size in addition to being 10 or smaller.\n",
     "\n",
     "To do that we will add a *model validator* to our pydantic class. The model validator has access to all of the proposed model values and can check them in whatever way it wants. If the values are acceptable then the method returns `self`. If the values are not acceptable then the validator should raise a `ValueError`.\n",
     "\n",
@@ -1052,7 +1053,7 @@
     "    @model_validator(mode=\"after\")\n",
     "    def limit_polynomial_order(self):\n",
     "        \n",
-    "        if self.polynomial_order > self.window_size - 1:\n",
+    "        if self.polynomial_order >= self.window_size - 1:\n",
     "            # Handle a bad polynomial order or window size\n",
     "            raise ValueError(\"Polynomial order must be smaller than window size\")\n",
     "            \n",
