--- a/03b_ipyautoui.ipynb
+++ b/03b_ipyautoui.ipynb
@@ -266,7 +266,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It seems like a `BoundedIntText` might be a better representation of this field. We can tell ipyautoui to use that widget via a dictionary passed into the `json_schema_extra` argument. The dictionary key that specifies the widget is `autoui`."
+    "`IntText` doesn't incorporate limits so `BoundedIntText` might be a better representation of this field. We can tell ipyautoui to use that widget via a dictionary passed into the `json_schema_extra` argument. The dictionary key that specifies the widget is `autoui`."
    ]
   },
   {
@@ -309,7 +309,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next we add the constraint that the window size must be less than or equal to 100. We also use the `desription` argument to `Field` to add a brief description of the field to the user interface."
+    "Next we add the constraint that the window size must be less than or equal to 100. We also use the `description` argument to `Field` to add a brief description of the field to the user interface."
    ]
   },
   {
@@ -486,7 +486,7 @@
     "1. Set those properties on the slider.\n",
     "2. Modify the type hint we provide for `year_range`.\n",
     "\n",
-    "Let's try both. For the sake of argument we will assume that the year range is 1880 to 2020."
+    "Let's try both. For the sake of argument we will assume that the year range is 1880 to 2023."
    ]
   },
   {
@@ -506,7 +506,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ui.di_widgets[\"year_range\"].max = 2020\n",
+    "ui.di_widgets[\"year_range\"].max = 2023\n",
     "ui.di_widgets[\"year_range\"].min = 1880"
    ]
   },
@@ -523,7 +523,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ui.di_widgets[\"year_range\"].value = (1880, 2020)"
+    "ui.di_widgets[\"year_range\"].value = (1880, 2023)"
    ]
   },
   {
@@ -549,7 +549,7 @@
     "\n",
     "```python\n",
     "# Only works in Python 3.12 and up!\n",
-    "type ConstrainedInt = Annotated[int, Field(ge=1880, le=2020)]\n",
+    "type ConstrainedInt = Annotated[int, Field(ge=1880, le=2023)]\n",
     "```"
    ]
   },
@@ -568,7 +568,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ConstrainedInt = TypeAliasType(\"ConstrainedInt\", Annotated[int, Field(ge=1880, le=2020)])"
+    "ConstrainedInt = TypeAliasType(\"ConstrainedInt\", Annotated[int, Field(ge=1880, le=2023)])"
    ]
   },
   {
@@ -620,7 +620,7 @@
     "\n",
     "There are a few options here:\n",
     "\n",
-    "1. Change one or both of the ranges of `widnow_size` and `polynomial_order`\n",
+    "1. Change one or both of the ranges of `window_size` and `polynomial_order`\n",
     "    1. When window size is being changed and a conflict arises, either\n",
     "        1. update the maximum value of the polynomial order to be consistent with window size, with the side effect that the value will be updated to.\n",
     "        1. update the value of `polynomial_order` but not its maximum.\n",
@@ -647,7 +647,7 @@
    "source": [
     "Our approach is to observe the `_value` of the widget, try to make a valid model out of it, and if that fails set the widget to the old value. `ipyautoui` will take care of displaying an appropriate error message for us.\n",
     "\n",
-    "The observe below is created using a [*closure*](https://en.wikipedia.org/wiki/Closure_(computer_programming)), which is a function that is created inside of another function where the inner function uses some of the variables form the outer function. Here we do that instead of treating `ui` as a global variable."
+   "The observe below is created using a [*closure*](https://en.wikipedia.org/wiki/Closure_(computer_programming)), which is a function that is created inside of another function where the inner function uses some of the variables from the outer function. Here we do that instead of treating `ui` as a global variable."
    ]
   },
   {
