Fix missing comma

--- a/03a_pydantic.ipynb
+++ b/03a_pydantic.ipynb
@@ -522,7 +522,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Constructing a (Second Draft) `DataSelector` Class with `dataclass`"
+    "## Constructing a (Second Draft) `DataSelector` Class with `dataclass`",
     "\n",
     "Writing a class with multiple attributes gets repetitive in Python. Each attribute typically comes with an argument to the class and lines of boilerplate code to set the attributes of the class to the those arguments.\n",
     "\n",
