Respond to most review comments on notebook 03a

--- a/03a_pydantic.ipynb
+++ b/03a_pydantic.ipynb
@@ -6,22 +6,17 @@
    "source": [
     "# Introducing Pydantic: Pythonic Data Validation\n",
     "\n",
-    "[Pydantic](https://docs.pydantic.dev/latest/) is a data validation library in Python that provides a way to define data schemas in a way that is both Pythonic and easy to use. \n",
+    "### Goal of this notebook \n",
+    "This notebook will introduce you to [Pydantic](https://docs.pydantic.dev/latest/), a data validation library that provides a way to define data schemas in a way that is both Pythonic and easy to use. \n",
     "\n",
     "**Note:** *We are using pydantic 2 in this tutorial! Many of the example will not work with pydantic 1.*\n",
     "\n",
     "\n",
-    "## TO DO IN THIS NOTEBOOK\n",
-    "- [x] Note the problem of data validation and the complexity of the multiple observers pattern needed to handle that even for this relatively simple dashboard. We want to improve our previous dashboard by better handling data validation and more easily handling the generation of the settings UI.\n",
-    "- [x] Introduce classes\n",
-    "- [x] Use of type annotation in dataclasses and data validation in Python (?)\n",
-    "- [x] Introduce type annotations\n",
-    "- [x] Introduce Pydantic\n",
-    "- [x] Show how to define a Pydantic model and use it to \n",
-    "  - [x] validate data using a Pydantic model\n",
-    "  - [x] express constraints of smoothing window/order in pydantic\n",
-    "- [x] Mention other features of Pydantic that may be relevant to our dashboard\n",
-    "- [x] Have them migrate the existing data validation in the dashboard project to pydantic (might require a lot of refactoring of the code)"
+    "### Steps you will take in this notebook\n",
+    "\n",
+    "1. Review creating a class in Python.\n",
+    "2. Learn about data classes in Python.\n",
+    "3. Learn how to write a class in Pydantic that enforces data types and constraints"
    ]
   },
   {
@@ -56,9 +51,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-  "## Review of Python classes\n",
+    "## Review of Python classes\n",
     "\n",
-    "We begin with a quick review of writing classes in Python. If you are comfortable with this, you can jump ahead to the next section on \"Constructing a (First Draft) `DataSelector` Class with plain Python\".\n\n",
+    "We begin with a quick review of writing classes in Python. If you are comfortable with this, you can jump ahead to the next section on \"Constructing a (First Draft) `DataSelector` Class with plain Python\".\n",
+    "\n",
     "The smallest class you can write is below. It does not really do anything, but you can create instances of it."
    ]
   },
@@ -345,7 +341,7 @@
     "\n",
     "Unlike the `name` attribute above, a default value is provided for `year_range`.\n",
     "\n",
-    "This class has a method called `__init__` that is called when the class is created. It is one of many special methods (called \"magic\" methods) recognized by Python.\n",
+    "This class also has a method called `__init__` that is called when the class is created, as in our first example.\n",
     "\n",
     "The `print` statement in the `__init__` is there to make it easier to see when it is called. It will not be included in the final version of this class."
    ]
@@ -522,8 +518,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Constructing a (Second Draft) `DataSelector` Class with `dataclass`",
-    "\n",
+    "## Constructing a (Second Draft) `DataSelector` Class with `dataclass`\n",
     "Writing a class with multiple attributes gets repetitive in Python. Each attribute typically comes with an argument to the class and lines of boilerplate code to set the attributes of the class to the those arguments.\n",
     "\n",
     "Data classes were introduced in Python 3.7 to make that sort of code more compact to write. They leverage *type annotations*, which were added to the language in version 3.0, and allow you to provide some information about the type of a variable.\n",
@@ -655,7 +650,7 @@
     "\n",
     "We could have done those last two things without `dataclass` by defining a couple of special methods methods in our class definition. However, it's really nice to just have it happen automatically behind the scenes, though!\n",
     "\n",
-    "*Note:* There is much more to data classes than we have covered. Read more about them XXX or in the [Python documentation](https://docs.python.org/3/library/dataclasses.html)."
+    "*Note:* There is much more to data classes than we have covered. Read more about them in this [Real Python tutorial](https://realpython.com/python-data-classes/) or in the [Python documentation](https://docs.python.org/3/library/dataclasses.html)."
    ]
   },
   {
@@ -679,8 +674,23 @@
     "\n",
     "There are a couple of issues, though:\n",
     "\n",
-    "+ You can set any of the attributes to whatever value you want. This will raise no errors: `DataSelectorDataClass(year_range=5, window_size=\"three\", polynomial_order=-3.14159)`.\n",
-    "+ None of the contraints we wanted are enforced.\n",
+    "1. You can set any of the attributes to whatever value you want. This will raise no errors: ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DataSelectorDataClass(year_range=5, window_size=\"three\", polynomial_order=-3.14159)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. None of the contraints we wanted are enforced.\n",
     "\n",
     "Pydantic will help us solve these issues."
    ]
@@ -689,7 +699,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Using pydantic to define our class\n",
+    "## Constructing a `DataSelector` Class with Pydantic\n",
     "\n",
     "The `pydantic` library solves several of our problems and gets us a few more abilities for free:\n",
     "\n",
@@ -697,6 +707,22 @@
     "+ Simple constraints like \"this number must be greater than or equal to two\" are easy to express.\n",
     "+ More complicated constraints like \"this number must be smaller than this other one\" are possible to express.\n",
     "+ It is straightforward to save objects to disk."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We import our dashboard below to get the `exception` cell magic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import dashboard"
    ]
   },
   {
@@ -723,6 +749,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# We will export the proper imports shortly, once we are closer to a final model\n",
     "from pydantic import BaseModel\n",
     "\n",
     "class DataSelectorModelDraft1(BaseModel):\n",
@@ -744,7 +771,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%exception\n",
+    "\n",
     "selector_pyd = DataSelectorModelDraft1(year_range=5, window_size=\"three\", polynomial_order=-3.14159)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pydantic includes fairly detailed error messages for validation errors. Many users could read this and update their input appropriately."
    ]
   },
   {
@@ -864,6 +900,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%exception\n",
+    "\n",
     "selector_pyd_simple2 = DataSelectorModelDraft2()\n",
     "selector_pyd_simple2.window_size = \"two\""
    ]
@@ -920,6 +958,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%exception\n",
+    "\n",
     "selector_pyd_simple3 = DataSelectorModelDraft3()\n",
     "selector_pyd_simple3.year_range = (\"eightteen eighty 5\", 8+5j)"
    ]
@@ -968,6 +1008,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%exception\n",
+    "\n",
     "selector_pyd_simple4 = DataSelectorModelDraft4()\n",
     "\n",
     "selector_pyd_simple4.window_size = 0"
@@ -1021,6 +1063,13 @@
     "To do that we will add a *model validator* to our pydantic class. The model validator has access to all of the proposed model values and can check them in whatever way it wants. If the values are acceptable then the method returns `self`. If the values are not acceptable then the validator should raise a `ValueError`.\n",
     "\n",
     "A draft class with the model validator is below."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we have a little experience with Pydantic we will start exporting the cells we need to make this part of our dashboard package."
    ]
   },
   {
